5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3113/executions/1871_1720.log
== TEST (2019-07-02 16:05:18) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

s=matriz.shape[0]

print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:14:30) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

s=matriz.shape[0]
d=matriz.shape[1]

for i in range(s):
	d=sum(matriz[:,i])




print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:14:48) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

s=matriz.shape[0]
d=matriz.shape[1]

for i in range(s):
	d=sum(matriz[i,:])




print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:14:56) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

s=matriz.shape[0]


for i in range(s):
	d=sum(matriz[i,:])




print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:15:08) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

s=matriz.shape[0]


for i in range(s):
	d=sum(matriz[:,i])




print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:15:16) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

s=matriz.shape[1]


for i in range(s):
	d=sum(matriz[:,i])




print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:20:10) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

s=matriz.shape[1]

for i in range(s):
	d=sum(matriz[:,i])

f=100/s
d=f*d


print(round(d,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:20:20) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

s=matriz.shape[1]

for i in range(s):
	d=sum(matriz[:,i])

f=100/s
r=f*d


print(round(r,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:20:36) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

s=matriz.shape[]

for i in range(s):
	d=sum(matriz[:,i])

f=100/s
r=f*d


print(round(r,2))
-- ERROR:
File "XXXX", line 6
    s=matriz.shape[]
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:20:39) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

s=matriz.shape[0]

for i in range(s):
	d=sum(matriz[:,i])

f=100/s
r=f*d


print(round(r,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:20:47) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

s=matriz.shape[0]

for i in range(s):
	d=sum(matriz[i,:])

f=100/s
r=f*d


print(round(r,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:20:52) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

s=matriz.shape[0]

for i in range(s):
	d=sum(matriz[i,:])

f=100/s
r=f*d


print(round(r,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:22:30) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

s=matriz.shape[0]

for i in range(s):
	d=sum(matriz[i,:])
	print(d)

f=100/s
r=f*d
print(round(r,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:23:21) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

s=matriz.shape[0]

for i in range(s):
	d=sum(matriz[i,:])
	print(d)

f=100/s
r=f*d
print(r)
print(round(r,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:23:32) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

s=matriz.shape[0]

for i in range(s):
	d=sum(matriz[i,:])
	print(d)

f=100/s
r=f+d
print(r)
print(round(r,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:25:00) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

s=matriz.shape[0]
d+1
for i in range(s):
	if(sum(matriz[i,:]/s>=s)):
		d=d+1

f=100/s
r=f+d
print(r)
print(round(r,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:25:03) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

s=matriz.shape[0]
d=1
for i in range(s):
	if(sum(matriz[i,:]/s>=s)):
		d=d+1

f=100/s
r=f+d
print(r)
print(round(r,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:25:18) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

s=matriz.shape[0]
d=1
for i in range(s):
	if(sum(matriz[i,:]/s>=s)):
		d=d+1

f=100/s
r=f*d
print(r)
print(round(r,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:25:24) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

s=matriz.shape[0]
d=1
for i in range(s):
	if(sum(matriz[i,:]/s>=s)):
		d=d+1

f=100/s
r=f*d
print(r)
print(round(r,2))
-- EXECUTION TIME:
1.2151
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
---- correct output:
66.67
---- user output:
66.66666666666667
66.67
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
---- correct output:
33.33
---- user output:
100.0
100.0
-- TEST CASE 3:
---- input:
[[9.4,3.0,2.6,8.5],[3.9,6.2,6.5,2.1],[8.8,5.2,8.3,9.6],[2.1,2.0,2.1,3.3]]
---- correct output:
50.0
---- user output:
25.0
25.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:25:29) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

s=matriz.shape[0]
d=
for i in range(s):
	if(sum(matriz[i,:]/s>=s)):
		d=d+1

f=100/s
r=f*d
print(r)
print(round(r,2))
-- ERROR:
File "XXXX", line 7
    d=
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:25:33) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

s=matriz.shape[0]
d=0
for i in range(s):
	if(sum(matriz[i,:]/s>=s)):
		d=d+1

f=100/s
r=f*d
print(r)
print(round(r,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:25:41) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

s=matriz.shape[0]
d=1
for i in range(s):
	if(sum(matriz[i,:]/s>=s)):
		d=d+1

f=100/s
r=f*d
print(r)
print(round(r,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:25:51) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

s=matriz.shape[0]
d=1
for i in range(s):
	if(sum(matriz[i,:]/s>=s)):
		d=d+1

f=100/s
r=f*d
print(round(r,2))
-- EXECUTION TIME:
0.994819
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
---- correct output:
66.67
---- user output:
66.67
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
---- correct output:
33.33
---- user output:
100.0
-- TEST CASE 3:
---- input:
[[9.4,3.0,2.6,8.5],[3.9,6.2,6.5,2.1],[8.8,5.2,8.3,9.6],[2.1,2.0,2.1,3.3]]
---- correct output:
50.0
---- user output:
25.0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:27:45) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

s=matriz.shape[0]
d=1

for i in range(s):
	if(matriz[i,:]<=10 and matriz[i,:]>=0):
		if(sum(matriz[i,:]/s>=s)):
			d=d+1

f=100/s
r=f*d
print(round(r,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:28:48) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

s=matriz.shape[0]
d=1

for i in range(s):
	if(sum(matriz[i,:]/s>=s)):
		d=d+1
		print(d)
f=100/s
r=f*d
print(round(r,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:29:25) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

s=matriz.shape[0]
d=1

for i in range(s):
	if(sum(matriz[i,:]/s>=s)):
		d=d+1
		p=sum(matriz[i,:]/s)
		print(d)
f=100/s
r=f*d
print(round(r,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:29:31) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

s=matriz.shape[0]
d=1

for i in range(s):
	if(sum(matriz[i,:]/s>=s)):
		d=d+1
		p=sum(matriz[i,:])/s
		print(d)
f=100/s
r=f*d
print(round(r,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:29:36) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

s=matriz.shape[0]
d=1

for i in range(s):
	if(sum(matriz[i,:]/s>=s)):
		d=d+1
		p=sum(matriz[i,:])/s
		print(d)
		print(p)
f=100/s
r=f*d
print(round(r,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:30:16) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

s=matriz.shape[0]
d=1

for i in range(s):
	if((sum(matriz[i,:])/s)>=s):
		d=d+1
		p=sum(matriz[i,:])/s
		print(d)
		print(p)
f=100/s
r=f*d
print(round(r,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:30:27) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

s=matriz.shape[0]
d=0

for i in range(s):
	if((sum(matriz[i,:])/s)>=s):
		d=d+1
		p=sum(matriz[i,:])/s
		print(d)
		print(p)
f=100/s
r=f*d
print(round(r,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:30:44) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

s=matriz.shape[0]
d=0

for i in range(s):
	if(sum(matriz[i,:])/s>=s):
		d=d+1
		p=sum(matriz[i,:])/s
		print(d)
		print(p)
f=100/s
r=f*d
print(round(r,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:30:58) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

s=matriz.shape[0]
d=0

for i in range(s):
	if(sum(matriz[i,:])/s>=s):
		d=d+1
		p=sum(matriz[i,:])/s
		print(d)
		print(p)
f=100/s
r=f*d
print(round(r,2))
-- EXECUTION TIME:
1.06918
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
---- correct output:
66.67
---- user output:
1
6.499999999999999
2
6.066666666666667
3
4.866666666666667
100.0
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
---- correct output:
33.33
---- user output:
1
6.033333333333334
2
3.5666666666666664
3
4.8999999999999995
100.0
-- TEST CASE 3:
---- input:
[[9.4,3.0,2.6,8.5],[3.9,6.2,6.5,2.1],[8.8,5.2,8.3,9.6],[2.1,2.0,2.1,3.3]]
---- correct output:
50.0
---- user output:
1
5.875
2
4.675000000000001
3
7.975
75.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:31:08) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

s=matriz.shape[0]
d=0

for i in range(s):
	if(sum(matriz[i,:])/s>=s):
		d=d+1
f=100/s
r=f*d
print(round(r,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:31:23) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

s=matriz.shape[0]
d=0

for i in range(s):
	if(sum(matriz[:,i])/s>=s):
		d=d+1
f=100/s
r=f*d
print(round(r,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:33:05) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

s=matriz.shape[0]
d=0

for i in range(s):
	if(sum(matriz[i,:])/s>=5):
		d=d+1
f=100/s
r=f*d
print(round(r,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:33:13) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("")))

s=matriz.shape[0]
d=0

for i in range(s):
	if(sum(matriz[i,:])/s>=5):
		d=d+1
f=100/s
r=f*d
print(round(r,2))
-- EXECUTION TIME:
1.21932
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
---- correct output:
66.67
---- user output:
66.67
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
---- correct output:
33.33
---- user output:
33.33
-- TEST CASE 3:
---- input:
[[9.4,3.0,2.6,8.5],[3.9,6.2,6.5,2.1],[8.8,5.2,8.3,9.6],[2.1,2.0,2.1,3.3]]
---- correct output:
50.0
---- user output:
50.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
